Fix bug where horizontal scroll bar would appear on meta-list

--- a/react/src/stylesheets/components/ContentArea/DashboardHome/HeroRolesContainer/HeroRolesList/_HeroRolesList.scss
+++ b/react/src/stylesheets/components/ContentArea/DashboardHome/HeroRolesContainer/HeroRolesList/_HeroRolesList.scss
@@ -11,6 +11,7 @@
     flex: 1;
     padding: 0;
     overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .empty-list-message {
